added teaser BrazilJS OnTheRoad Sorocaba

--- a/dev/sass/main-sass.scss
+++ b/dev/sass/main-sass.scss
@@ -127,6 +127,7 @@
  @import "_layout/layout_articles.scss";
  @import "_layout/layout_events.scss";
  @import "_layout/layout_conf.scss";
+ @import "_layout/layout_ontheroad.scss";
 
 /**
  * #HELPERS
