--- a/dev/sass/main-sass.scss
+++ b/dev/sass/main-sass.scss
@@ -52,6 +52,7 @@
  * Page...................Page Content Layout.
  * Articles...............Article list page Layout.
  * Conf...................Conf Layout.
+ * Events.................Events template Layout.
 
  * HELPERS
  * Show/hide............Helpers to show and side stuff.
@@ -125,9 +126,9 @@
  @import "_layout/layout_post.scss";
  @import "_layout/layout_page.scss";
  @import "_layout/layout_articles.scss";
- @import "_layout/layout_events.scss";
- @import "_layout/layout_conf.scss";
  @import "_layout/layout_ontheroad.scss";
+ @import "_layout/layout_conf.scss";
+ @import "_layout/layout_events.scss";
 
 /**
  * #HELPERS
