--- a/dev/sass/main-sass.scss
+++ b/dev/sass/main-sass.scss
@@ -113,6 +113,7 @@
  @import "_components/components_products.scss";
  @import "_components/components_newsletter.scss";
  @import "_components/components_ticker.scss";
+ @import "_components/components_courses.scss";
  @import "_components/components_schedule.scss";
  @import "_components/components_sponsors.scss";
  @import "_components/components_social-networks.scss";
