--- a/dev/sass/main-sass.scss
+++ b/dev/sass/main-sass.scss
@@ -127,8 +127,9 @@
  @import "_layout/layout_post.scss";
  @import "_layout/layout_page.scss";
  @import "_layout/layout_articles.scss";
- @import "_layout/layout_ontheroad.scss";
+ // @import "_layout/layout_ontheroad.scss";
  @import "_layout/layout_conf.scss";
+ @import "_layout/layout_teaser.scss";
  @import "_layout/layout_events.scss";
 
 /**
