--- a/views/event.twig
+++ b/views/event.twig
@@ -152,9 +152,9 @@
 		<section class="section-wrapper--type-3">
 			<div class="content">
 				<div class="center-elements">
-					<h2 class="title title--type-2">Call For Pappers</h2>
+					<h2 class="title title--type-2">Call For Papers</h2>
 					<p class="sponsor-list__paragraph paragraph paragraph--font-2 paragraph--size-2 paragraph--color-3">{{event.pappers_descricao}}</p>
-					<a class="anchor-button" href="{{event.pappers_url}}">Saiba mais <span class="visuallyhidden">sobre o call for pappers</span></a>
+					<a class="anchor-button" href="{{event.pappers_url}}">Saiba mais <span class="visuallyhidden">sobre o call for papers</span></a>
 				</div>
 			</div>
 		</section>
